--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,17 +1,32 @@
-@media screen and (min-width: 480px) {
+/*small / sm*/
+@media screen and (min-width: 576px) {
 
 }
 
+
+/*medium / md*/
 @media screen and (min-width: 768px) {
-
+    #start-bot h4{
+        font-size: 50px;
+    }  
+    #start-bot .jumbotron-text{
+        font-size: 20px
 }
 
 
+/*large / lg*/
 @media screen and (min-width: 992px) {
 
 }
 
 
+/*extra-large / xl*/
 @media screen and (min-width: 1200px) {
+
+}
+
+
+/*extra-extra-large / xxl*/
+@media screen and (min-width: 1400px) {
 
 }
