--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,45 @@ header .col{
 .avatar{
     height: 250px;
 }
+
+/*footer*/
+.line-height{
+    line-height: 300px;
+    margin-top: -140px;
+}
+
+.send-button{
+    padding: 10px 15px;
+    color: white;
+    text-decoration: none;
+}
+
+.backg-footer-gray{
+ background-color: #3A546D;
+}
+
+.backg-footer-darkgray{
+ background-color: #2C3E50;
+}
+
+.app *{
+    border: 2px solid white;
+    border-radius: 50%;
+    margin: 0 5px;
+}
+
+.app i:nth-child(2){
+    padding: 12px 15px;
+}
+
+.app i:nth-child(3){
+    padding: 12px 12px;
+}
+
+.app i:nth-child(4){
+    padding: 12px 14px;
+}
+
+.app i:nth-child(5){
+    padding: 12px 15px;
+}
